--- a/style.css
+++ b/style.css
@@ -21,6 +21,23 @@ main {
     box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1);
 }
 
+.jsme-container {
+    width: 100%;
+    height: 520px;
+}
+
+@media (max-width: 1024px) {
+    .jsme-container {
+        height: 460px;
+    }
+}
+
+@media (max-width: 640px) {
+    .jsme-container {
+        height: 400px;
+    }
+}
+
 canvas {
     width: 100%;
     height: auto;
