--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,11 @@
             <div class="flex justify-between items-center h-16">
                 <div class="flex flex-col">
                     <span class="text-xs font-semibold uppercase tracking-widest text-slate-400">Amino Acid Explorer</span>
-                    <span class="text-[10px] text-slate-500">Deployed Commit: <span id="commit-hash">loading...</span></span>
+                    <span class="text-[10px] text-slate-500">
+                        Deployed Commit:
+                        <span id="commit-hash">{{ site.github.build_revision | default: "local" | slice: 0, 7 }}</span>
+                        · <span id="commit-date">{{ site.time | date: "%Y-%m-%d %H:%M UTC" }}</span>
+                    </span>
                 </div>
                 
                 <div class="flex items-center space-x-6">
