--- a/style.css
+++ b/style.css
@@ -142,3 +142,27 @@ canvas {
 .flipped {
     transform: rotateY(180deg);
 }
+
+/* Smooth directional grow effect for links */
+.link-grow {
+    position: relative;
+    overflow: hidden;
+}
+
+.link-grow::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    background-color: #3b82f6;
+    transform: scaleX(0);
+    transform-origin: bottom right;
+    transition: transform 0.4s cubic-bezier(0.86, 0, 0.07, 1);
+}
+
+.link-grow:hover::after {
+    transform: scaleX(1);
+    transform-origin: bottom left;
+}
